small styling changes: added new svg icons

--- a/exercise3/main.css
+++ b/exercise3/main.css
@@ -97,6 +97,13 @@ a:hover {
     font-weight: 600;
 }
 
+a h3 {
+    color: black;
+}
+a h3:hover {
+    color: black;
+}
+
 .nav-button {
     display: flex;
     flex-direction: row;
