exercise5: letter animations added

--- a/main.css
+++ b/main.css
@@ -20,6 +20,7 @@ body{
     margin-left: 2%;
     margin-right: 2%;
     margin-top: 2%;
+    background-color: #efefef;
     /* gap: 56px; */
     /* align-items: flex-start; */
 }
