--- a/exercise6/door10.css
+++ b/exercise6/door10.css
@@ -1,65 +1,50 @@
-#animation10 {
+#animation3 {
     position: absolute;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
     width: 200px;
     height: 200px;
     left: 50px;
-    top: 65px;
-    
+    top: 65px;  
 }
 
-.row{
-    display: flex;
-    gap: 20px;
-    left: 0;
-}
-
-.shape10{
-    width: 20px;
-    height: 20px;
-    animation-name: shape-transform;
+.shape3 {
     animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-direction: alternate;
     animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-#background-shape{
+.shape3.big-circle {
     position: absolute;
-    width: 80px;
-    height: 80px;
-    left:10px;
-    top:10px;
-    background-color: rgb(250, 255, 147);
-    animation-name: background-anim;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
-    animation-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-@keyframes shape-transform {
-  0%, 10% {
-    background-color: rgb(233, 123, 158);
+    width: 90px;
+    height: 90px;
     border-radius: 50%;
-    transform: rotate(0deg);
-  }
-  80%, 100% {
-    background-color: rgb(163, 0, 0);
-    transform: rotate(180deg);
-  }
+    left: 5px;
+    top: 10px;
+    animation-name: circle-flip;
+
 }
 
-@keyframes background-anim {
+.shape3.small-circle {
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    left: 30px;
+    top: 35px;
+    animation-name: circle-flip;
+
+}
+
+.shape3:nth-child(1) {
+  animation-delay: 1s;
+}
+
+@keyframes circle-flip {
   0%, 10% {
-    scale: 0;
-    transform: rotate(0deg);
+    background-color: rgb(0, 169, 96);
   }
   80%, 100% {
-    scale: 1;
-    transform: rotate(180deg);
+    transform: scale(-1);
+    background-color: rgb(33, 107, 255);
   }
 }
-
