--- a/project1/main.css
+++ b/project1/main.css
@@ -27,7 +27,7 @@ body {
     width: 100%;
     padding-top: 25px;
     background: transparent;
-    z-index: 10;
+    z-index: 12000;
 }
 
 #title-area{
@@ -90,11 +90,21 @@ h3 {
   cursor: grab;
 }
 
-image {
+#red-travel-line {
+    width: 100%;
+    height: 100%;  
+    position: fixed;
+}
+
+/* svg {
+  background: url('https://www.google.nl/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png') no-repeat;
+} */
+
+.poster {
     transition-duration: 0.2s;
     transition-timing-function: ease-in-out;
 }
-image:hover {
+.poster:hover {
     scale: 1.5;
     transition-duration: 0.5s;
     transition-timing-function: ease-in-out;
@@ -121,7 +131,7 @@ image:hover {
     z-index: 10000;
     background: white;
     top:0;
-    left:0;
+    left:4px;
     padding: 8px 12px;
     border-radius: 16px;
     border: 1.5px solid rgb(87, 87, 87);
