--- a/project1/main.css
+++ b/project1/main.css
@@ -16,6 +16,9 @@ body {
     width: 100%;
     background: transparent;
     margin: 0;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
     padding: 0;
     overflow: hidden;
     height: 100vh;
@@ -24,7 +27,7 @@ body {
 
 #header-area {
     position: absolute;
-    width: 100%;
+    /* width: 100%; */
     padding-top: 25px;
     background: transparent;
     z-index: 12000;
@@ -103,6 +106,23 @@ h3 {
    font-size: 22px;
 } 
 
+.close-icon {
+    position: fixed;
+    height: 40px;
+    width: 40px;
+    right: 5vw;
+    top: 48px;
+    cursor: pointer;
+    border-radius: 12px;
+    transition: border-color 0.3s ease-in-out;
+    box-sizing: border-box;
+    border: 1.5px solid transparent;
+}
+.close-icon:hover {
+    border: 1.5px solid rgb(177, 177, 177);
+    transition: border-color 0.3s ease-in-out;
+}
+
 .additional-info {
     display: flex;
     align-items: first baseline;
@@ -148,10 +168,17 @@ h3 {
     position: fixed;
     z-index: 10000;
     background: white;
-    padding: 8px 12px;
+    padding: 8px 18px;
     border-radius: 18px;
     border: 1.5px solid rgb(87, 87, 87);
     pointer-events: none;
+}
+.pop-up.classifier {
+    padding: 6px 12px;
+    border-radius: 16px;
+    background: rgb(34, 34, 34);
+    color: rgb(239, 239, 239);
+    border: 1.5px solid rgb(115, 115, 115);
 }
 .pop-up.opened {
     visibility: visible;
@@ -178,14 +205,31 @@ h3 {
 }
 .arrow{
     position: fixed;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 50px;
+    border-radius: 12px;
+    transition: border-color 0.3s ease-in-out;
+    box-sizing: border-box;
+    border: 1.5px solid transparent;
+}
+.arrow:hover{
+    /* background-color: rgb(234, 234, 234); */
+    border: 1.5px solid rgb(177, 177, 177);
+    transition: border-color 0.3s ease-in-out;
 }
 .left-arrow {
     top: 25vw;
     left: 25px;
+    padding-right: 5px;
 }
 .right-arrow {
     top: 25vw;
     right: 25px;
+    padding-left: 5px;
 }
 .page-overlay {
     z-index: 9999;
@@ -299,11 +343,12 @@ img {
 
 #disclaimer{
     position: fixed;
+    max-width: 400px;
     left:0;
     bottom:0;
     padding: 4px;
     z-index: 5000;
-    width: 30vw;
+    width: 40vw;
     display: flex;
     gap:4px;
 }
