--- a/exercise8/pattern1.css
+++ b/exercise8/pattern1.css
@@ -1,14 +1,16 @@
-.body {
+body {
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
+    margin: 0;
+    padding: 0;
 }
 
 .canvas {
-    left: -10px;
-    top: -10px;
+    left: 0px;
+    top: 0px;
 }
 
 .label {
