--- a/project2/main.css
+++ b/project2/main.css
@@ -48,16 +48,19 @@ p {
     color: var(--primary-color)
 }
 
+button {
+    background-color: transparent;
+    border: 1px solid var(--primary-color);
+    border-radius: 12px;
+    backdrop-filter: blur(5px);
+    background: rgba(255, 255, 255, 0.1);
+}
+
 .settings-button {
     position:absolute;
     left: 10px;
     top: 10px;
-    background-color: transparent;
-    border: 1px solid var(--primary-color);
     padding: 18px 24px;
-    border-radius: 12px;
-    backdrop-filter: blur(5px);
-    background: rgba(255, 255, 255, 0.1);
 }
 
 
@@ -73,4 +76,16 @@ p {
     height: 20px;
     background-color: #722021;
     will-change: transform;
+}
+
+.disclaimer {
+    font-family: "Heebo-body";
+    font-size: 12px;
+    color: var(--primary-color);
+}
+
+.sidebar-area {
+    position: absolute;
+    left: 10px;
+    top: 84px;
 }
