--- a/project2/popup.css
+++ b/project2/popup.css
@@ -193,7 +193,9 @@ input {
   margin-top: 8px;
   padding: 4px 0;
   border: none;
-  background: none;
+  background: none;   
+  background-color: transparent; 
+  backdrop-filter: none;   
   color: var(--primary-color);
   font-family: "heebo-body";
   font-size: 16px;
