--- a/project2/about-popup.css
+++ b/project2/about-popup.css
@@ -8,16 +8,17 @@
     gap: 12px;
 }
 
-.learn-more-button {
-    display: flex;
-    padding: 12px 24px;
-    gap: 18px;
-    align-items: center;
-}
-
 ol li {
     font-family: "heebo-body";
     font-size: 18px;
     color: var(--primary-color)
 
+}
+
+.about-body {
+    margin-bottom: 24px;
+}
+
+#learn-more-overlay {
+    
 }
