--- a/project2/main.css
+++ b/project2/main.css
@@ -41,7 +41,7 @@ h1 {
     color: var(--primary-color);
 }
 #main-title {
-    z-index: 100;
+    z-index: 90;
 }
 
 #header-area {
@@ -57,6 +57,10 @@ p {
     font-family: 'Heebo-body';
     font-size: 18px;
     color: var(--primary-color)
+}
+
+p b {
+    font-weight: 900;
 }
 
 button {
@@ -77,6 +81,7 @@ button {
     position:absolute;
     left: 20px;
     top: 10px;
+    z-index: 50;
     padding: 18px 24px;
 }
 .metrics-container{
@@ -122,8 +127,6 @@ body.popup-open .sidebar-area, body.popup-open .settings-button {
   transition: opacity 0.6s ease;
 }
 
-
-
 .disclaimer {
     font-family: "Heebo-body";
     font-size: 12px;
@@ -134,6 +137,7 @@ body.popup-open .sidebar-area, body.popup-open .settings-button {
     position: absolute;
     display: flex;
     flex-direction: column;
+    z-index: 50;
     gap: 24px;
     left: 10px;
     top: 96px;
@@ -232,3 +236,10 @@ body.popup-open .sidebar-area, body.popup-open .settings-button {
     transition: border 0.3s ease, color 0.3s ease;
 }
 
+@media (max-width: 1024px) {
+    body {
+        overflow: scroll;
+    }
+
+
+}
