--- a/project2/popup.css
+++ b/project2/popup.css
@@ -35,7 +35,7 @@
 }
 
 #initial-instructions p {
-  font-size: 16px;
+  font-size: 18px;
 }
 
 .instruction-area {
@@ -50,7 +50,7 @@
 
 ul {
   font-family: "heebo-body";
-  font-size: 16px;
+  font-size: 18px;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -75,7 +75,7 @@ ul li {
 
 label {
   font-family: "heebo-body";
-  font-size: 16px;
+  font-size: 18px;
   color: var(--primary-color);
 }
 
@@ -103,7 +103,7 @@ input {
   background-color: transparent;
   border: 1px solid var(--primary-color);
   border-radius: 12px;
-  font-size: 16px;
+  font-size: 18px;
   color: var(--primary-color);
   padding: 6px 18px;
 }
@@ -141,13 +141,14 @@ input {
   flex-direction: row;
   gap: 24px;
   font-family: "heebo-body";
-  font-size: 16px;
+  font-size: 18px;
   color: var(--primary-color);
 }
 #pulse-count-sec {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-height: 56px;
 }
 #heartrate-output-sec {
   display: flex;
@@ -162,9 +163,9 @@ input {
 }
 .activity-button-area label {
   display: inline-block;
-  padding: 4px 12px;
+  padding: 4px 16px;
   border: solid 1px #ccc;
-  font-size: 16px;
+  font-size: 18px;
   border-radius: 12px;
   transition: all 0.3s;
 }
@@ -181,7 +182,7 @@ input {
 .learn-more-btn {
   border: none;
   color: var(--primary-color);
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: underline;
 }
 
@@ -198,7 +199,7 @@ input {
   backdrop-filter: none;   
   color: var(--primary-color);
   font-family: "heebo-body";
-  font-size: 16px;
+  font-size: 18px;
   text-decoration: underline;
   cursor: pointer;
 }
