--- a/project2/popup.css
+++ b/project2/popup.css
@@ -12,8 +12,10 @@
   border-radius: 18px;
   background: rgba(253, 247, 237, 0.5);
   backdrop-filter: blur(5px);
+  box-shadow: 0 4px 30px rgba(46, 0, 0, 0.05);
   width: 55vw;
   min-width: 300px;
+  transition: filter 0.3s ease, background-color 0.3s ease;
 }
 
 .close-icon {
@@ -70,6 +72,8 @@ ul li {
 
 .age-activity-cont {
   display: flex;
+  flex-wrap: wrap;
+  gap: 18px;
   justify-content: space-between;
 }
 
@@ -123,11 +127,18 @@ input {
 }
 #heartbeat-area {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.pulse-instruction-area{
+    display: flex;
+    gap: 10px;
 }
 .heart-pulse-container {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-wrap: wrap;
   gap: 20px;
   margin-top: -12px;
   margin-bottom: -24px;
@@ -148,6 +159,7 @@ input {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  min-width: 72px;
   min-height: 56px;
 }
 #heartrate-output-sec {
@@ -202,4 +214,20 @@ input {
   font-size: 18px;
   text-decoration: underline;
   cursor: pointer;
+}
+
+@media (max-width: 1124px) {
+    .overlay {
+        position: absolute;
+        top: 72px;
+        transform: translate(-50%, 0);
+        overflow-y: auto;
+    }
+
+    .heart-pulse-container {
+        flex-direction: column;
+        gap: 0px;
+        margin-top: -12px;
+        margin-bottom: 24px;
+    }
 }
