--- a/project2/popup.css
+++ b/project2/popup.css
@@ -53,6 +53,7 @@
 ul {
   font-family: "heebo-body";
   font-size: 18px;
+  line-height: 22px;
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -69,6 +70,11 @@ ul li {
   width: 100%;
   justify-content: space-between;
 }
+
+/* #timer-display {
+    font-weight: 900;
+    font-size: 28px;
+} */
 
 .age-activity-cont {
   display: flex;
@@ -100,7 +106,7 @@ label {
   display: flex;
   flex-direction: column;
   min-width: 250px;
-  gap: 6px;
+  gap: 4px;
 }
 
 input {
@@ -109,13 +115,13 @@ input {
   border-radius: 12px;
   font-size: 18px;
   color: var(--primary-color);
-  padding: 6px 18px;
+  padding: 4px 18px;
 }
 
 .button-container {
   width: 100%;
   display: flex;
-  padding: 0px 0px 12px 0px;
+  padding: 0px 0px 0px 0px;
   justify-content: flex-end;
 }
 
@@ -129,6 +135,8 @@ input {
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 .pulse-instruction-area{
     display: flex;
@@ -136,12 +144,12 @@ input {
 }
 .heart-pulse-container {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
-  margin-top: -12px;
-  margin-bottom: -24px;
+  width: 100%;
 }
 .heart-icon {
   width: 200px;
@@ -150,24 +158,42 @@ input {
 .pulse-info {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  min-height: 96px;
   gap: 24px;
   font-family: "heebo-body";
   font-size: 18px;
   color: var(--primary-color);
+  margin-top: -24px;
+  margin-bottom: -24px;
 }
 #pulse-count-sec {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   min-width: 72px;
+  gap: 12px;
   min-height: 56px;
 }
 #heartrate-output-sec {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   justify-content: flex-end;
   padding-left: 24px;
-  border-left: 1.5px solid var(--primary-color);
+  width: 100%;
+}
+.divider-area{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap:12px;
+    width: 100%;
+}
+.divider-line {
+    width: 100%;
+    border-top: 1px solid var(--primary-color);
 }
 .activity-button-area {
   display: flex;
@@ -175,7 +201,7 @@ input {
 }
 .activity-button-area label {
   display: inline-block;
-  padding: 4px 16px;
+  padding: 2px 16px;
   border: solid 1px #ccc;
   font-size: 18px;
   border-radius: 12px;
