--- a/project2/main.css
+++ b/project2/main.css
@@ -55,7 +55,7 @@ p {
     padding: 0;
     margin: 0;
     font-family: 'Heebo-body';
-    font-size: 18px;
+    font-size: 16px;
     color: var(--primary-color);
     line-height: 24px;
 }
@@ -174,7 +174,7 @@ body.alert-open #heart-container {
     display: flex;
     padding-left: 24px;
     font-family: "heebo-body";
-    font-size: 18px;
+    font-size: 16px;
     gap: 18px;
     align-items: center;
     justify-content: center;
@@ -210,7 +210,7 @@ body.alert-open #heart-container {
 }
 .state-label {
     font-family: 'Heebo-body';
-    font-size: 18px;
+    font-size: 16px;
     color: #B68673; /* light brown */
     transition: all 0.3s ease;
     margin-left: 8px;
@@ -243,6 +243,89 @@ body.alert-open #heart-container {
     border: 1px solid var(--primary-color);
     transition: border 0.3s ease, color 0.3s ease;
 }
+
+#heart-animation {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    pointer-events: none;
+}
+
+.shape-anim-sec {
+    position: absolute; 
+    /* left: 50%;
+    top: 50%; */
+    transform: translate(-100%, -100%);
+    width: auto; 
+    height: auto;
+    animation: shapeAnim 7s ease forwards;
+    z-index: 200;
+    visibility: visible;
+}
+
+.shape-anim-sec .shape-img {
+    position: relative; /* Change from absolute to relative */
+    width: auto;
+    height: auto;
+    max-width: 1200px; /* Adjust to your image size */
+    display: block;
+}
+
+.shape-anim-sec:nth-child(1) {
+    animation-delay: 1s;
+    animation-name: shapeAnim1; /* Each gets its own animation */
+}
+
+.shape-anim-sec:nth-child(2) {
+    animation-delay: 2s;
+    animation-name: shapeAnim2;
+}
+
+.shape-anim-sec:nth-child(3) {
+    animation-delay: 3s;
+    animation-name: shapeAnim3;
+}
+
+
+@keyframes shapeAnim1 {
+    0% {
+        transform: translate(-100%, -100%);
+    }
+    50% {
+        transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+    }
+    100% {
+        transform: translate(calc(100vw + 100%), calc(100vh + 100%));
+    }
+}
+
+/* Shape 2: Start top-right, center, exit bottom-left */
+@keyframes shapeAnim2 {
+    0% {
+        transform: translate(calc(100vw + 100%), -100%);
+    }
+    50% {
+        transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+    }
+    100% {
+        transform: translate(-100%, calc(100vh + 100%));
+    }
+}
+
+@keyframes shapeAnim3 {
+    0% {
+        transform: translate(-100%, calc(100vh + 100%));
+    }
+    50% {
+        transform: translate(calc(50vw - 50%), calc(50vh - 50%));
+    }
+    100% {
+        transform: translate(calc(100vw + 100%), -100%);
+    }
+}
+
 
 @media (max-width: 1024px) {
     body {
