--- a/main.css
+++ b/main.css
@@ -33,12 +33,13 @@ h1 {
 
 h2 {
     font-family: 'Roboto';
+    font-size: 24px;
     color: #4b4b4b;
 }
 
 h3 {
     font-family: 'Roboto';
-    font-size: 28px;
+    font-size: 24px;
     font-weight: 100;
 }
 
@@ -49,4 +50,11 @@ a {
 
 a:hover {
     color: #e67716;
+}
+
+#header-area {
+    display: flex;
+    gap: 36px;
+    align-items: flex-end;
+    margin-bottom: 24px;
 }
